--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Wayne Sun</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
